ci: add Docker Compose installation and improve LocalStack setup

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,28 +44,54 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Set up Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
+      - name: Install Python and pip
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install awscli-local
+
       - name: Start LocalStack
         run: |
           docker-compose -f docker-compose-localstack.yml up -d localstack
-          sleep 10  # Wait for LocalStack to start
+          sleep 15  # Give LocalStack more time to start
+
+      - name: Check LocalStack Status
+        run: |
+          docker ps
+          docker logs localstack
 
       - name: Configure LocalStack
         run: |
-          pip install awscli-local
-          awslocal eks create-cluster --name test-cluster --role-arn arn:aws:iam::000000000000:role/test-role --region us-east-1
+          export AWS_ACCESS_KEY_ID=test
+          export AWS_SECRET_ACCESS_KEY=test
+          export AWS_DEFAULT_REGION=us-east-1
+          export ENDPOINT_URL=http://localhost:4566
           
+          awslocal eks create-cluster \
+            --name test-cluster \
+            --role-arn arn:aws:iam::000000000000:role/test-role \
+            --region us-east-1
+
       - name: Deploy to LocalStack
         run: |
           export AWS_ENDPOINT_URL=http://localhost:4566
           kubectl config set-cluster test-cluster --server=http://localhost:4566
-          kubectl apply -f kubernetes/storage-class.yaml
           kubectl apply -f kubernetes/todo-deployment.yaml
           kubectl apply -f kubernetes/todo-service.yaml
 
-      - name: Verify deployment
+      - name: Test Application
         run: |
-          kubectl get pods -l app=todo-app
-          kubectl get service todo-app-service
+          sleep 10
+          curl http://localhost:5001
 
       - name: Cleanup
-        run: docker-compose -f docker-compose-localstack.yml down
+        if: always()
+        run: |
+          docker-compose -f docker-compose-localstack.yml down
+          docker system prune -f
