--- a/docker-compose-localstack.yml
+++ b/docker-compose-localstack.yml
@@ -8,9 +8,12 @@ services:
       - "4566:4566"            # LocalStack Edge Port
       - "4510-4559:4510-4559"  # external services port range
     environment:
-      - SERVICES=s3,lambda,eks
+      - SERVICES=s3,lambda,eks,ec2,iam
       - DEBUG=1
       - DOCKER_HOST=unix:///var/run/docker.sock
+      - DEFAULT_REGION=us-east-1
+      - AWS_DEFAULT_REGION=us-east-1
+      - ENABLE_CONFIG_UPDATES=1
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
